<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.Toolbar
                android:layout_alignParentTop="true"
                android:id="@+id/services_toolbar"
                android:layout_width="match_parent"
                android:minHeight="@dimen/action_bar_default_height_material"
                android:layout_height="wrap_content"
                android:background="@color/colorWellBlue"
                android:elevation="0dp">

                <ImageView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top"
                    android:id="@+id/add_card_image"
                    android:src="@drawable/ic_add_circle"
                    android:layout_alignParentEnd="true"
                    />

                <TextView
                    android:padding="10sp"
                    android:text="@string/service_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/add_card_image2"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    />

                <ImageView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|top"
                    android:id="@+id/main_menu"
                    android:src="@drawable/ic_add_circle"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_below="@id/services_toolbar"
                android:paddingTop="8dp"
                android:layout_marginHorizontal="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <GridView
                    android:id="@+id/idGServices"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:horizontalSpacing="18dp"
                    tools:listitem="@layout/services_card"
                    android:smoothScrollbar="true"
                    android:numColumns="2"
                    android:verticalSpacing="18dp"
                    android:padding="8dp"/>

            </LinearLayout>
        </RelativeLayout>


        <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_gravity="bottom"
            android:id="@+id/bottomAppBar"
            app:fabAlignmentMode="center"
            app:fabAnimationMode="slide"
            app:fabCradleMargin="10dp"
            app:backgroundTint="@color/colorWellBlue"
            app:fabCradleVerticalOffset="15dp"
            app:fabCradleRoundedCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:lines="3"
                android:textSize="11sp"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:paddingTop="18dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:text="@string/footer"
                android:layout_marginEnd="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:backgroundTint="@color/white"
            app:rippleColor="@color/colorWellBlue"
            android:tint="@color/white"
            android:enabled="false"
            app:layout_anchor="@id/bottomAppBar"
            android:id="@+id/fab"
            app:maxImageSize="60dp"
            android:src="@drawable/ic_iocns_car_repair"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


